force-app/main/default/objects/Cluster__c/Cluster__c.object-meta.xml
<CustomObject>
    <label>Cluster</label>
    <nameField>
        <label>Cluster UUID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clusters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>