force-app/main/default/objects/Cluster__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clusters</relationshipLabel>
    <relationshipName>Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>