force-app/main/default/objects/Cluster__c/fields/Account_SE__c.field-meta.xml
<CustomField>
    <fullName>Account_SE__c</fullName>
    <label>Account SE</label>
    <type>Email</type>
</CustomField>