force-app/main/default/objects/Cluster__c/fields/archived__c.field-meta.xml
<CustomField>
    <fullName>archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if a cluster has been decommissioned (e.g., end of POC) or an &apos;sdreset&apos; was performed that changed the cluster ID. This allows us to track historical data.</description>
    <inlineHelpText>Denotes if a cluster has been decommissioned (e.g., end of POC) or an &apos;sdreset&apos; was performed that changed the cluster ID. This allows us to track historical data.</inlineHelpText>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>