force-app/main/default/objects/Cluster__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>