force-app/main/default/objects/Cluster__c/fields/CallHome_Date__c.field-meta.xml
<CustomField>
    <fullName>CallHome_Date__c</fullName>
    <description>To track CallHome status change date, this will help identify inactive/Dark clusters historically</description>
    <inlineHelpText>Timestamp of  &quot;Receiving CallHome&quot; flag change</inlineHelpText>
    <label>CallHome Date</label>
    <type>DateTime</type>
</CustomField>