force-app/main/default/objects/Cluster__c/fields/Capacity_Available__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Available__c</fullName>
    <description>Capacity left to be utilised</description>
    <formula>IF(
Capacity_Total__c &gt; 0.00,
( Capacity_Total__c  - ( Capacity_Snapshot__c  +  Capacity_System__c )) /  Capacity_Total__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>