force-app/main/default/objects/Cluster__c/fields/Capacity_Days_Until_85__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Days_Until_85__c</fullName>
    <description>Number of days left until the cluster capacity reaches 85%</description>
    <formula>IF(
NOT(ISNULL(Tentative_Date_for_85_Capacity__c)),
IF(
Tentative_Date_for_85_Capacity__c &gt;= TODAY(),
Tentative_Date_for_85_Capacity__c - TODAY(),
0
),
null
)</formula>
    <inlineHelpText>Number of days left until the cluster capacity reaches 85%</inlineHelpText>
    <label>Capacity Days Until 85%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>