force-app/main/default/objects/Cluster__c/fields/Capacity_Days_Until_90__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Days_Until_90__c</fullName>
    <description>Number of days left until the cluster capacity reaches 90%</description>
    <formula>IF(
NOT(ISNULL(Tentative_Date_for_90_Capacity__c)),
IF(
Tentative_Date_for_90_Capacity__c &gt;= TODAY(),
Tentative_Date_for_90_Capacity__c - TODAY(),
0
),
null
)</formula>
    <inlineHelpText>Number of days left until the cluster capacity reaches 90%</inlineHelpText>
    <label>Capacity Days Until 90%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>