force-app/main/default/objects/Cluster__c/fields/Capacity_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Snapshot__c</fullName>
    <description>Capacity snapshot</description>
    <label>Capacity Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>