force-app/main/default/objects/Cluster__c/fields/Capacity_System__c.field-meta.xml
<CustomField>
    <fullName>Capacity_System__c</fullName>
    <description>Capacity of the system</description>
    <label>Capacity System</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>