force-app/main/default/objects/Cluster__c/fields/Capacity_Total__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Total__c</fullName>
    <description>Total capacity of the cluster</description>
    <label>Capacity Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>