force-app/main/default/objects/Cluster__c/fields/Capacity_Updated__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Updated__c</fullName>
    <description>The date and time when the capacity information was updated</description>
    <label>Capacity Updated</label>
    <type>DateTime</type>
</CustomField>