force-app/main/default/objects/Cluster__c/fields/Capacity_Utilization__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Utilization__c</fullName>
    <description>Capacity used</description>
    <formula>IF(
Capacity_Total__c &gt; 0.00,
(Capacity_Snapshot__c  +  Capacity_System__c) /  Capacity_Total__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Utilization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>