force-app/main/default/objects/Cluster__c/fields/CDM_End_of_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>CDM_End_of_Support_Status__c</fullName>
    <formula>IF(
NOT(ISBLANK(account__r.Approved_software_program__c)),
(
IF(INCLUDES(account__r.Approved_software_program__c, &quot;Approved CDM 8.1 extension (28-FEB-2025)&quot;),
&quot;Approved CDM 8.1 extension (28-FEB-2025); &quot;, &quot;&quot;) &amp;
IF(INCLUDES(account__r.Approved_software_program__c, &quot;Approved CDM 8.1 extension (30-APR-2025)&quot;),
&quot;Approved CDM 8.1 extension (30-APR-2025); &quot;, &quot;&quot;) &amp;
IF(INCLUDES(account__r.Approved_software_program__c, &quot;Approved CDM 8.1 extension (31-JUL-2025)&quot;),
&quot;Approved CDM 8.1 extension (31-JUL-2025); &quot;, &quot;&quot;)
),
IF(
ISBLANK(Release_Version_End_Of_Support_Date__c),
&quot;EOS status not available&quot;,
IF( Release_Version_End_Of_Support_Date__c &lt; TODAY(),
&quot;Unsupported CDM software version&quot;,
&quot;Supported CDM software version&quot;
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDM End of Support Status</label>
    <type>Text</type>
</CustomField>