force-app/main/default/objects/Cluster__c/fields/Cloud_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider__c</fullName>
    <label>Cloud Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>