force-app/main/default/objects/Cluster__c/fields/Cloud_Provider_Product__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Provider_Product__c</fullName>
    <label>Cloud Provider Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>