force-app/main/default/objects/Cluster__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>CS21-1939</description>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>