force-app/main/default/objects/Cluster__c/fields/Consumption_Message__c.field-meta.xml
<CustomField>
    <fullName>Consumption_Message__c</fullName>
    <label>Consumption Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>