force-app/main/default/objects/Cluster__c/fields/consumption_percentage__c.field-meta.xml
<CustomField>
    <fullName>consumption_percentage__c</fullName>
    <inlineHelpText>Consumption Percentage is Calculated as Storage Usage/Sum of Licensed Capacity on Unique Assets</inlineHelpText>
    <label>Consumption Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>