force-app/main/default/objects/Cluster__c/fields/Contains_r6000_Product_s__c.field-meta.xml
<CustomField>
    <fullName>Contains_r6000_Product_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains r6000 Product/s</label>
    <type>Checkbox</type>
</CustomField>