force-app/main/default/objects/Cluster__c/fields/Dark_Site__c.field-meta.xml
<CustomField>
    <fullName>Dark_Site__c</fullName>
    <description>CS21-1939</description>
    <label>Dark Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completely Dark - RSC P only</fullName>
            </value>
            <value>
                <fullName>Tunnel is disabled but using RSC</fullName>
            </value>
            <value>
                <fullName>Telemetry Available but not using RSC</fullName>
            </value>
            <value>
                <fullName>Not a Dark site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>