force-app/main/default/objects/Cluster__c/fields/data_reduction__c.field-meta.xml
<CustomField>
    <fullName>data_reduction__c</fullName>
    <inlineHelpText>Data reduction percentage achieved via Rubrik deduplication and compression</inlineHelpText>
    <label>Data Reduction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>