force-app/main/default/objects/Cluster__c/fields/DR_Site__c.field-meta.xml
<CustomField>
    <fullName>DR_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box is cluster is a disaster recovery site</description>
    <label>DR Site</label>
    <type>Checkbox</type>
</CustomField>