force-app/main/default/objects/Cluster__c/fields/Driver_node_id__c.field-meta.xml
<CustomField>
    <fullName>Driver_node_id__c</fullName>
    <label>Driver node id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>