force-app/main/default/objects/Cluster__c/fields/Email_Sent_for_90_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_for_90_Consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field shows whether Email alert is sent or not at 90 Consumption (Storage Usage/Sum of Licensed Capacity of Unique Assets)</inlineHelpText>
    <label>Email Sent for 90% Consumption</label>
    <type>Checkbox</type>
</CustomField>