force-app/main/default/objects/Cluster__c/fields/Enable_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Email Alert</label>
    <type>Checkbox</type>
</CustomField>