force-app/main/default/objects/Cluster__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Clusters</relationshipLabel>
    <relationshipName>Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>