force-app/main/default/objects/Cluster__c/fields/Envoy__c.field-meta.xml
<CustomField>
    <fullName>Envoy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21-1939</description>
    <label>Envoy</label>
    <type>Checkbox</type>
</CustomField>