force-app/main/default/objects/Cluster__c/fields/GC_Notes__c.field-meta.xml
<CustomField>
    <fullName>GC_Notes__c</fullName>
    <description>Free text field used by Partner Operations to categorize clusters and make notes related to Global Commit Utility deployments.</description>
    <inlineHelpText>Free text field used by Partner Operations to categorize clusters and make notes related to Global Commit Utility deployments.</inlineHelpText>
    <label>GC Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>