force-app/main/default/objects/Cluster__c/fields/Grafana_Link__c.field-meta.xml
<CustomField>
    <fullName>Grafana_Link__c</fullName>
    <formula>IF(uuid__c!= NULL,hyperlink(&quot;https://monitor.rubrik.com/d/pbRF7GMMz/cluster-health?orgId=1&amp;var-Customer=&quot;+SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(account__r.Name,&quot; &quot;,&quot;%20&quot;),&quot;(&quot;,&quot;%28&quot;),&quot;)&quot;,&quot;%29&quot;)+&quot;&amp;var-ClusterTag=All&amp;var-Cluster=&quot;+ Name+&quot;&amp;var-Node=All&amp;var-Service=All&quot;,&quot;https://monitor.rubrik.com/d/pbRF7GMMz/cluster-health?orgId=1&amp;var-Customer=&quot;+SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(account__r.Name,&quot; &quot;,&quot;%20&quot;),&quot;(&quot;,&quot;%28&quot;),&quot;)&quot;,&quot;%29&quot;)+&quot;&amp;var-ClusterTag=All&amp;var-Cluster=&quot;+ Name+&quot;&amp;var-Node=All&amp;var-Service=All&quot;),&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grafana Link</label>
    <type>Text</type>
</CustomField>