force-app/main/default/objects/Cluster__c/fields/if_Reason_Other_Please_specify__c.field-meta.xml
<CustomField>
    <fullName>if_Reason_Other_Please_specify__c</fullName>
    <description>CS21-2342: If other’s is chosen then allow the users to enter the reason if others field is chosen</description>
    <label>if Reason Other, Please specify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>