force-app/main/default/objects/Cluster__c/fields/Insight_Matches__c.field-meta.xml
<CustomField>
    <fullName>Insight_Matches__c</fullName>
    <description>This field is updated by SentryAI</description>
    <label>Insight Matches</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>