force-app/main/default/objects/Cluster__c/fields/Insight_Matches_Update_Time__c.field-meta.xml
<CustomField>
    <fullName>Insight_Matches_Update_Time__c</fullName>
    <description>This field stores the date and time when the Insight Matches and Insight Matches Updated fields were updated by Sentry AI</description>
    <label>Insight Matches Update Time</label>
    <type>DateTime</type>
</CustomField>