force-app/main/default/objects/Cluster__c/fields/Insight_Matches_Updated__c.field-meta.xml
<CustomField>
    <fullName>Insight_Matches_Updated__c</fullName>
    <description>This field is updated by SentryAI</description>
    <label>Insight Matches Updated</label>
    <type>DateTime</type>
</CustomField>