force-app/main/default/objects/Cluster__c/fields/is_callhome_on__c.field-meta.xml
<CustomField>
    <fullName>is_callhome_on__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The Field to track receiving either Stats or live logs from cluster. Will be turned off by PhoneHome when not receiving stats after certain period(7 days)</description>
    <inlineHelpText>To track if we are receiving stats/logs or not, managed by heartbeat</inlineHelpText>
    <label>Receiving CallHome</label>
    <type>Checkbox</type>
</CustomField>