force-app/main/default/objects/Cluster__c/fields/Is_Insight_Matches_Updated__c.field-meta.xml
<CustomField>
    <fullName>Is_Insight_Matches_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to determine if the fields Insight Matches and Insight Matches Updated was updated by Sentry AI in the last one hour. True if yes, else false.</description>
    <label>Is Insight Matches Updated?</label>
    <type>Checkbox</type>
</CustomField>