force-app/main/default/objects/Cluster__c/fields/MSP_Consumption__c.field-meta.xml
<CustomField>
    <fullName>MSP_Consumption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MSP Consumption</label>
    <type>Checkbox</type>
</CustomField>