force-app/main/default/objects/Cluster__c/fields/MSP_End_User__c.field-meta.xml
<CustomField>
    <fullName>MSP_End_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSP End User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clusters (MSP End User)</relationshipLabel>
    <relationshipName>Clusters2</relationshipName>
    <type>Lookup</type>
</CustomField>