force-app/main/default/objects/Cluster__c/fields/MSP_Parent__c.field-meta.xml
<CustomField>
    <fullName>MSP_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MSP Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clusters (MSP Parent)</relationshipLabel>
    <relationshipName>Clusters1</relationshipName>
    <type>Lookup</type>
</CustomField>