force-app/main/default/objects/Cluster__c/fields/NFR__c.field-meta.xml
<CustomField>
    <fullName>NFR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cluster is associated to an NFR order</description>
    <label>NFR</label>
    <type>Checkbox</type>
</CustomField>