force-app/main/default/objects/Cluster__c/fields/Not_in_RSC_details__c.field-meta.xml
<CustomField>
    <fullName>Not_in_RSC_details__c</fullName>
    <description>CS21-2398: to track user specified cluster status</description>
    <label>Not in RSC details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>