force-app/main/default/objects/Cluster__c/fields/Not_in_RSC_reason__c.field-meta.xml
<CustomField>
    <fullName>Not_in_RSC_reason__c</fullName>
    <description>CS21-2398: to track user specified cluster status</description>
    <label>Not in RSC reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Isolated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>