force-app/main/default/objects/Cluster__c/fields/objects_protected__c.field-meta.xml
<CustomField>
    <fullName>objects_protected__c</fullName>
    <description>Number of Objects being protected</description>
    <inlineHelpText>1. Number of Objects being protected on a regular cluster
2. Captured number of Objects being protected by EDGE/AIR</inlineHelpText>
    <label>Objects Protected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>