force-app/main/default/objects/Cluster__c/fields/Old_Tag__c.field-meta.xml
<CustomField>
    <fullName>Old_Tag__c</fullName>
    <label>Old Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>