force-app/main/default/objects/Cluster__c/fields/original_manufacturing_date__c.field-meta.xml
<CustomField>
    <fullName>original_manufacturing_date__c</fullName>
    <label>Original Manufacturing Date</label>
    <type>DateTime</type>
</CustomField>