force-app/main/default/objects/Cluster__c/fields/Overall_Cluster_Migration__c.field-meta.xml
<CustomField>
    <fullName>Overall_Cluster_Migration__c</fullName>
    <description>CS21-1939</description>
    <formula>(RSC_Migrations_Tasks_Completed__c / Total_RSC_Migration_Tasks__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overall Cluster Migration %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>