force-app/main/default/objects/Cluster__c/fields/Preferred_Time__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time__c</fullName>
    <label>Business Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>