force-app/main/default/objects/Cluster__c/fields/Proactive_Case_Contact__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Case_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proactive Case Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clusters</relationshipLabel>
    <relationshipName>Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>