force-app/main/default/objects/Cluster__c/fields/Proactive_Case_Contact_OBH__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Case_Contact_OBH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Proactive Case Contact outside of business hours</description>
    <inlineHelpText>Proactive Case Contact outside of business hours</inlineHelpText>
    <label>Proactive Case Contact(OBH)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clusters (Proactive Case Contact(OBH))</relationshipLabel>
    <relationshipName>Clusters1</relationshipName>
    <type>Lookup</type>
</CustomField>