force-app/main/default/objects/Cluster__c/fields/Proactive_Heads_Up__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Heads_Up__c</fullName>
    <description>This field is used by Proactive Support team. Belongs to CS</description>
    <label>Proactive Heads Up</label>
    <type>TextArea</type>
</CustomField>