force-app/main/default/objects/Cluster__c/fields/Reason_for_alerts_snooze__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_alerts_snooze__c</fullName>
    <description>CS21-2342: allow the users to choose the reason for snoozing</description>
    <label>Reason for alerts snooze</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Snoozing Proactive Alerts  for EOS</fullName>
                <label>Snoozing Proactive Alerts for EOS</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>