force-app/main/default/objects/Cluster__c/fields/Registration_status__c.field-meta.xml
<CustomField>
    <fullName>Registration_status__c</fullName>
    <label>Registration status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGISTERED</fullName>
            </value>
            <value>
                <fullName>NOT_REGISTERED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>