force-app/main/default/objects/Cluster__c/fields/Release_Version_End_Of_Support_Date__c.field-meta.xml
<CustomField>
    <fullName>Release_Version_End_Of_Support_Date__c</fullName>
    <description>2619: End of Support (EOS) Notifications for Clusters Running CDM 8.1 (or earlier)</description>
    <label>Release Version End Of Support Date</label>
    <type>Date</type>
</CustomField>