force-app/main/default/objects/Cluster__c/fields/Replica_Storage__c.field-meta.xml
<CustomField>
    <fullName>Replica_Storage__c</fullName>
    <label>Replica Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>