force-app/main/default/objects/Cluster__c/fields/replication_target__c.field-meta.xml
<CustomField>
    <fullName>replication_target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replication Target</label>
    <referenceTo>Cluster__c</referenceTo>
    <relationshipLabel>Clusters</relationshipLabel>
    <relationshipName>Clusters</relationshipName>
    <type>Lookup</type>
</CustomField>