force-app/main/default/objects/Cluster__c/fields/RSC_Migration_Tasks_Inprogress__c.field-meta.xml
<CustomField>
    <fullName>RSC_Migration_Tasks_Inprogress__c</fullName>
    <label>RSC Migration Tasks In-progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>