force-app/main/default/objects/Cluster__c/fields/RSC_Migrations_Tasks_Completed__c.field-meta.xml
<CustomField>
    <fullName>RSC_Migrations_Tasks_Completed__c</fullName>
    <description>CS21-1939</description>
    <label>RSC Migrations Tasks Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>