force-app/main/default/objects/Cluster__c/fields/RSC_R300__c.field-meta.xml
<CustomField>
    <fullName>RSC_R300__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CS21-1939</description>
    <label>R300</label>
    <type>Checkbox</type>
</CustomField>