force-app/main/default/objects/Cluster__c/fields/Scale_Cluster__c.field-meta.xml
<CustomField>
    <fullName>Scale_Cluster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scale Cluster</label>
    <type>Checkbox</type>
</CustomField>