force-app/main/default/objects/Cluster__c/fields/SentryAI_URL__c.field-meta.xml
<CustomField>
    <fullName>SentryAI_URL__c</fullName>
    <formula>If( NOT( ISBLANK(Name ) ), hyperlink( &quot;https://sentryai.rubrik.com/cluster/&quot; + Name + &quot;/&quot;,&quot;https://sentryai.rubrik.com/cluster/&quot; + Name + &quot;/&quot;), If( NOT (ISBLANK( account__c ) ) , hyperlink(&quot;https://sentryai.rubrik.com/account/&quot; + CASESAFEID(account__c ) + &quot;/&quot;,&quot;https://sentryai.rubrik.com/account/&quot; + CASESAFEID(account__c ) + &quot;/&quot;), Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SentryAI URL</label>
    <type>Text</type>
</CustomField>