force-app/main/default/objects/Cluster__c/fields/Shipping_Address_Contact_for_RMA_handlin__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Contact_for_RMA_handlin__c</fullName>
    <label>Shipping Address/Contact for RMAHandling</label>
    <type>TextArea</type>
</CustomField>