force-app/main/default/objects/Cluster__c/fields/snapshot_count__c.field-meta.xml
<CustomField>
    <fullName>snapshot_count__c</fullName>
    <label>Snapshot Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>