force-app/main/default/objects/Cluster__c/fields/Snooze_Alerts_Until__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Alerts_Until__c</fullName>
    <inlineHelpText>To disable Snooze, either leave this field blank or set to date in the past</inlineHelpText>
    <label>Snooze Alerts Until</label>
    <type>Date</type>
</CustomField>