force-app/main/default/objects/Cluster__c/fields/software_version__c.field-meta.xml
<CustomField>
    <fullName>software_version__c</fullName>
    <label>Software Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>