force-app/main/default/objects/Cluster__c/fields/Special_Delivery_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Instruction__c</fullName>
    <description>This text field is used in community to add delivery instructions in address.</description>
    <label>Special Delivery Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>