force-app/main/default/objects/Cluster__c/fields/storage_usage__c.field-meta.xml
<CustomField>
    <fullName>storage_usage__c</fullName>
    <description>Storage utilized on this cluster rendered in GB</description>
    <inlineHelpText>Cluster utilization in GB</inlineHelpText>
    <label>Storage Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>