force-app/main/default/objects/Cluster__c/fields/Storage_Usage_TB__c.field-meta.xml
<CustomField>
    <fullName>Storage_Usage_TB__c</fullName>
    <description>Cluster utilization in TB</description>
    <formula>storage_usage__c / 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Cluster utilization in TB</inlineHelpText>
    <label>Storage Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>