force-app/main/default/objects/Cluster__c/fields/System_Space__c.field-meta.xml
<CustomField>
    <fullName>System_Space__c</fullName>
    <description>Available system space</description>
    <formula>IF(
Capacity_Total__c &gt; 0.00,
Capacity_System__c  /  Capacity_Total__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Space</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>