force-app/main/default/objects/Cluster__c/fields/tag__c.field-meta.xml
<CustomField>
    <fullName>tag__c</fullName>
    <label>Tag</label>
    <length>80</length>
    <type>Text</type>
</CustomField>