force-app/main/default/objects/Cluster__c/fields/Tentative_Date_for_100_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Date_for_100_Capacity__c</fullName>
    <label>Tentative Date for 100% Capacity</label>
    <type>Date</type>
</CustomField>