force-app/main/default/objects/Cluster__c/fields/total_archival_usage__c.field-meta.xml
<CustomField>
    <fullName>total_archival_usage__c</fullName>
    <description>Total of all data archived by the cluster (on cloud or on-prem archival location) in Gigabytes</description>
    <inlineHelpText>Total of all data archived by the cluster (on cloud or on-prem archival location) in Gigabytes</inlineHelpText>
    <label>Total Archival Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>