force-app/main/default/objects/Cluster__c/fields/Total_Node_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Node_Count__c</fullName>
    <label>Total Node Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>