force-app/main/default/objects/Cluster__c/fields/Total_RSC_Migration_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_RSC_Migration_Tasks__c</fullName>
    <description>CS21-1939</description>
    <label>Total RSC Migration Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>