force-app/main/default/objects/Cluster__c/fields/True_Forward_Cluster__c.field-meta.xml
<CustomField>
    <fullName>True_Forward_Cluster__c</fullName>
    <label>True Forward Cluster</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Scale_Cluster__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>