force-app/main/default/objects/Cluster__c/fields/uuid__c.field-meta.xml
<CustomField>
    <fullName>uuid__c</fullName>
    <label>UUID</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>