force-app/main/default/objects/Cluster__c/validationRules/if_Reason_Other_Please_specify.validationRule-meta.xml
<ValidationRule>
    <fullName>if_Reason_Other_Please_specify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(Reason_for_alerts_snooze__c) ,
ISPICKVAL(Reason_for_alerts_snooze__c,&apos;Others&apos;) ,
ISBLANK(if_Reason_Other_Please_specify__c)
)</errorConditionFormula>
    <errorDisplayField>if_Reason_Other_Please_specify__c</errorDisplayField>
    <errorMessage>This field is mandatory when the &apos;Reason for alerts snooze&apos; field selected as &apos;Others&apos;.</errorMessage>
</ValidationRule>