force-app/main/default/objects/Cluster__c/validationRules/Not_in_RSC_details_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_in_RSC_details_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK(Not_in_RSC_details__c),
ISPICKVAL(Not_in_RSC_reason__c, &quot;Other&quot;)
)</errorConditionFormula>
    <errorDisplayField>Not_in_RSC_details__c</errorDisplayField>
    <errorMessage>&apos;Not in RSC details&apos; field must be filled out if the &apos;Not in RSC reason&apos; field is set to &apos;Other&apos;.</errorMessage>
</ValidationRule>